src/styles/Intro.scss
#intro-wrapper {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 2rem;
  width: 75%;
  height: 80%;
  color: white;
  #intro-video {
    width: 100%;
    height: auto;
    background-color: rgba(255, 255, 255, 0.5);
  }
  .intro-list {
    list-style: "✔  ";
  }
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

